--- a/LanguageLearningSite/Pages/Word.cshtml
+++ b/LanguageLearningSite/Pages/Word.cshtml
@@ -1,5 +1,6 @@
-﻿@page "{random}"
+﻿@page "{id:int?}"
 @model LanguageLearningSite.Pages.WordModel
 @{
     ViewData["Title"] = Model.word.WordString;
 }
+
