--- a/htmls/css.css
+++ b/htmls/css.css
@@ -33,18 +33,61 @@
 
 .leftcolumn{
     grid-area: leftcolumn;
-    display: subgrid;
+    display: grid;
     border:gray solid 1pt;
 }
 
 .rightcolumn{
     grid-area: rightcolumn;
-    display: subgrid;
+    display: grid;
     border:gray solid 1pt;
 }
 .pagenav{
     grid-area: pagenav;
     display: grid;
+    grid-template-areas: 
+    "prev numbers next";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+}
+.numbers{
+    grid-area: numbers;
+}
+.prev{
+    grid-area:prev;
+}
+.next{
+    grid-area:next;
+}
+.box{
+    border:gray double 1pt;
+    display: grid;
+    grid-template-areas: 
+    "word wordpart"
+    "definition definition"
+    "language language";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+}
+.wordofthedaybox{
+    border:gray double 3pt;
+    display: grid;
+    grid-template-areas: 
+    "word language";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+}
+.partofspeech{
+    grid-area: wordpart;
+}
+.word{
+    grid-area: word;
+}
+.definition{
+    grid-area:definition;
+}
+.language{
+    grid-area:language;
 }
 .search{
     grid-area: search;
@@ -53,4 +96,8 @@
     "slabel sinput ssubmit";
     grid-template-columns: auto 1fr auto;
     grid-template-rows: auto;
+}
+.allwords{
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(autofit, );
 }
