--- a/LanguageLearningSite/Pages/Word.cshtml
+++ b/LanguageLearningSite/Pages/Word.cshtml
@@ -4,3 +4,24 @@
     ViewData["Title"] = Model.word.WordString;
 }
 
+<div class="lefcolumn">
+    <div class="word">@Model.word.WordString</div>
+    <a class="addbutton">+</a>
+    <div id="definitions">
+        @for(int i =0; i < Model.word.Definitions.Count; i++)
+        {
+            @if(i==0 || Model.word.Definitions[i-1].PartOfSpeach != Model.word.Definitions[i].PartOfSpeach)
+            {
+                <div class="partofspeech">@Model.word.Definitions[i].PartOfSpeach</div>
+            }
+            else
+            {
+                <div class="partofspeech">---</div>
+            }
+
+            <div class="definition">@Model.word.Definitions[i].Def</div>
+        }
+    </div>
+</div>
+<div class="rightcolumn">
+</div>
