--- a/LanguageLearningSite/Pages/Profile.cshtml
+++ b/LanguageLearningSite/Pages/Profile.cshtml
@@ -2,3 +2,7 @@
 @model LanguageLearningSite.Pages.ProfileModel
 @{
 }
+
+<form method="post" asp-page-handler="out" class="rightcolumn">
+    <input type="submit">
+</form>
