--- a/LanguageLearningSite/Pages/Shared/_Layout.cshtml
+++ b/LanguageLearningSite/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <a class="random" asp-page="Word" asp-route-random="@true">Random</a>
         <div class="browsewords"><a asp-page="AllWords">Browse words</a></div>
         <div class="practice"><a asp-page="Practice">Practice</a></div>
-        <div class="myprofile"><a asp-page="Profile">Profile</a></div>
+        <div class="myprofile"><a asp-page="RegisterLogin">Profile</a></div>
         @RenderBody()
         <form class="search"><label grid-area="slabel">Search:</label><input grid-area="sinput" type="text" /><input grid-area="ssubmit" type="submit" /></form>
     </div>
