--- a/LanguageLearningSite/Pages/AllWords.cshtml
+++ b/LanguageLearningSite/Pages/AllWords.cshtml
@@ -61,7 +61,8 @@
 
 <div class="pagenav">
     <div class="prev">
-        <a><<</a><a><</a>
+        <a asp-page="AllWords" asp-route-show="@Model.WordsOnPage" asp-route-skip="0"><<</a>
+        <a asp-page="AllWords" asp-route-show="@Model.WordsOnPage" asp-route-skip="@(Model.WordsOnPage - Model.Skip)"><</a>
     </div>
     <div class="numbers">
         @if (Model.words.Count < Model.WordsOnPage)
@@ -72,9 +73,12 @@
         {
             for (int i = 0; i < Math.Ceiling((double)Model.words.Count / Model.WordsOnPage); i++)
             {
-                <a asp-page="AllWords" asp-route-skip="@(Model.WordsOnPage*i)">@(i+1)</a>
+                <a asp-page="AllWords" asp-route-show="@Model.WordsOnPage" asp-route-skip="@(Model.WordsOnPage*i)">@(i+1)</a>
             }
         }
     </div>
-    <div class="next"><a>></a><a>>></a></div>
+    <div class="next">
+    <a asp-page="AllWords" asp-route-show="@Model.WordsOnPage" asp-route-skip="@(Model.words.Count - Model.WordsOnPage)">></a>
+    <a asp-page="AllWords" asp-route-show="@Model.WordsOnPage" asp-route-skip="@(Model.WordsOnPage + Model.Skip)">>></a>
+    </div>
 </div>
