--- a/LanguageLearningSite/Pages/Index.cshtml
+++ b/LanguageLearningSite/Pages/Index.cshtml
@@ -6,8 +6,8 @@
 
 <div class="lefcolumn">
     <div class="wordofthedaybox">
-        <div class="word">Word of the day</div>
-        <a class="language">Word</a>
+        <div class="language">Word of the day</div>
+        <a class="word">Word</a>
     </div>
     <div class="text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus pretium mattis.
@@ -26,7 +26,7 @@
         finibus ipsum, et placerat magna ligula sit amet metus.
     </div>
 </div>
-<form class="rightcolumn">
+<form method="post" class="rightcolumn">
     <input type="text" />
     <input type="submit" value="Process text">
 </form>
