--- a/LanguageLearningSite/Pages/Profile.cshtml
+++ b/LanguageLearningSite/Pages/Profile.cshtml
@@ -4,5 +4,10 @@
 }
 
 <form method="post" asp-page-handler="out" class="rightcolumn">
-    <input type="submit">
+    <input value="Log out" type="submit">
 </form>
+
+<div class="leftcolumn">
+    <p>@Model.user.Username</p>
+    <p>@Model.user.Email</p>
+</div>
