--- a/LanguageLearningSite/wwwroot/css/css.css
+++ b/LanguageLearningSite/wwwroot/css/css.css
@@ -1,12 +1,12 @@
-.container{
+.container {
     display: grid;
-
-    grid-template-areas: 
-    "home browsewords practice random myprofile"
-    "leftcolumn leftcolumn empty rightcolumn rightcolumn"
-    "pagenav pagenav search search search";
+    grid-template-areas:
+        "home browsewords practice random myprofile"
+        "leftcolumn leftcolumn empty rightcolumn rightcolumn"
+        "pagenav pagenav search search search";
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows:  auto 1fr auto;
+    min-height: 400px;
 }
 @media(max-width: 800px)
 {
