--- a/LanguageLearningSite/Pages/UserPages/Profile.cshtml
+++ b/LanguageLearningSite/Pages/UserPages/Profile.cshtml
@@ -2,10 +2,38 @@
 @model             ProfileModel
 @{
 }
+<div class="rightcolumn">
+    <form method="post" asp-page-handler="change" >
+        <div class="field container">
+            <label asp-for="user.Username"></label>
+            <span asp-validation-for="user.Username"></span>
+            <input asp-for="user.Username" />
+        </div>
+        <div class="field container">    
+            <label asp-for="user.Email"></label>
+            <span asp-validation-for="user.Email"></span>
+            <input asp-for="user.Email" />
+        </div>
+        <div class="field container">
 
-<form method="post" asp-page-handler="out" class="rightcolumn">
+            <label asp-for="user.Password"></label>
+            <span asp-validation-for="user.Password"></span>
+            <input type="password" asp-for="user.Password" />
+        </div>
+        <div class="field container">
+            <input value="Change your information" type="submit">
+            <input type="submit" />
+            </div>
+</form>
+<form method="post" asp-page-handler="out" >
     <input value="Log out" type="submit">
 </form>
+<form method="post" asp-page-handler="delete" >
+    <input value="Delete account" type="submit">
+</form>
+
+</div>
+
 
 <div class="leftcolumn">
     <p>@Model.user.Username</p>
