--- a/LanguageLearningSite/Pages/WordPages/Word.cshtml
+++ b/LanguageLearningSite/Pages/WordPages/Word.cshtml
@@ -24,4 +24,10 @@
     </div>
 </div>
 <div class="rightcolumn">
+    <form method=post asp-page-handler="Update">
+        <input type="submit"/>
+    </form>
+    <form method=post asp-page-handler="Delete">
+        <input type="submit"/>
+    </form>
 </div>
