--- a/LanguageLearningSite/Pages/CRUDPages/UserCreation.cshtml
+++ b/LanguageLearningSite/Pages/CRUDPages/UserCreation.cshtml
@@ -1,4 +1,42 @@
-﻿@page
+﻿@page "{id?}"
+@using LanguageLearning
 @model LanguageLearningSite.Pages.CRUDPages.UserCreationModel
 @{
 }
+
+<div class="leftcolumn">
+    <form method="post">
+                <div class="field container">
+            <label asp-for="user.Username"></label>
+            <span asp-validation-for="user.Username"></span>
+            <input asp-for="user.Username" />
+        </div>
+        <div class="field container">    
+            <label asp-for="user.Email"></label>
+            <span asp-validation-for="user.Email"></span>
+            <input asp-for="user.Email" />
+        </div>
+        <div class="field container">
+
+            <label asp-for="user.Password"></label>
+            <span asp-validation-for="user.Password"></span>
+            <input type="password" asp-for="user.Password" />
+        </div>
+        <div class="field container">
+                        <select asp-for="user.Role" asp-items="Html.GetEnumSelectList<Role>()">
+                <option value="">Choose role</option>
+            </select>
+        </div>
+        <div class="field container">
+            <input type="reset" />
+            <input type="submit" />
+            </div>
+    </form>
+</div>
+<div class="rightcolumn">
+    <div>
+        <form method="post" asp-page-handler="Delete">
+            <input type="submit"/>
+        </form>
+    </div>
+</div>
