--- a/LanguageLearningSite/Pages/UserPages/RegisterLogin.cshtml
+++ b/LanguageLearningSite/Pages/UserPages/RegisterLogin.cshtml
@@ -40,6 +40,7 @@
 
 
 <div class="rightcolumn">
+    <a asp-page="/CRUDPages/UserCreation">Create a user</a>
     <form asp-page-handler="login" method="post">
         <h3>Login</h3>
         <div class="field container">
