--- a/LanguageLearningSite/Pages/WordPages/AllWords.cshtml
+++ b/LanguageLearningSite/Pages/WordPages/AllWords.cshtml
@@ -18,43 +18,16 @@
                 <div><a asp-page="Word" asp-route-random="@false" asp-route-id="@word.Id" class="word">@word.WordString</a></div>
                 <div class="partofspeech">@word.PartsOfSpeach</div>
                 <div class="definition">@word.MostPopularDefinition.Def</div>
-                @if(!User.IsInRole("Admin"))
-                {
-                    <div class="language">
-                       <form method="post" asp-page-handler="DeleteWord">
-                           <input type="hidden" value=@word.Id>
-                           <input type="submit" value="Delete">
-                       </form>
-                        </div>
-                }
-                else
-                {
                     <div class="language">@word.Definitions.Count definitions in total</div>
-                }
             </div>
         }
     </div>
 </div>
 <div class="rightcolumn">
-    <h2>Filters</h2>
-    <form>
-        <div class="include">
-            <h3>Include</h3>
-            <div class="row"><input type="checkbox" /><label>Something</label></div>
-            <div class="row"><input type="checkbox" /><label>Something</label></div>
-        </div>
-        <div class="exclude">
-            <h3>Exclude</h3>
-            <div class="row"><input type="checkbox" /><label>Something</label></div>
-            <div class="row"><input type="checkbox" /><label>Something</label></div>
-        </div>
-        <div class="sort">
-            <h3>Filter</h3>
-            <div class="row"><input type="checkbox" /><label>Something</label></div>
-            <div class="row"><input type="checkbox" /><label>Something</label></div>
-        </div>
-        <input type="submit" />
-    </form>
+    
+    <div>
+        <a asp-page="/CRUDPages/WordCreation">Add a Word</a>
+    </div>
 
 
     <form asp-page-handler="display" method="post">
