--- a/LanguageLearningSite/Pages/WordPages/AllWords.cshtml
+++ b/LanguageLearningSite/Pages/WordPages/AllWords.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{skip:int=0}/{show:int=4}/{search?}"
-@using LanguageLearning.WordClasses
+@using LanguageLearningLogic.WordClasses
 @model             AllWordsModel
 @{
     ViewData["Title"] = "All words";
