--- a/LanguageLearningSite/Pages/WordPages/Word.cshtml
+++ b/LanguageLearningSite/Pages/WordPages/Word.cshtml
@@ -25,9 +25,9 @@
 </div>
 <div class="rightcolumn">
     <form method=post asp-page-handler="Update">
-        <input type="submit"/>
+        <input type="submit" value="update"/>
     </form>
     <form method=post asp-page-handler="Delete">
-        <input type="submit"/>
+        <input type="submit" value="delete"/>
     </form>
 </div>
