--- a/LanguageLearningSite/Pages/GamePages/Unjumble.cshtml
+++ b/LanguageLearningSite/Pages/GamePages/Unjumble.cshtml
@@ -1,11 +1,33 @@
-﻿@page
+﻿@page "{id?}"
 @model LanguageLearningSite.Pages.GamePages.UnjumbleModel
 @{
 }
 
-<form method="post">
-    <select asp-for="@Model.Id" asp-items="Model.Options"></select>
-    <p>@Model.RandomDefinition.Definitions[0].Def</p>
-    <input type="hidden" asp-for="@Model.RandomDefinition"/>
-    <input type="submit" value="Next"/>
+<div class=leftcolumn>
+<h1>Put the letters in the right order</h1>
+<h2>@Model.Game.JumbledLetters</h2>
+<form method="post" asp-page-handler="AddAnswer">
+    <input type="hidden" asp-for=gameid/>
+    <input type="text" asp-for="Answer"/>
+    <input type="submit" value="Add answer"/>
 </form>
+@if(Model.Game.GetGuesses is not null && Model.Game.GetGuesses.Count > 0)
+    {
+        @foreach(string answer in Model.Game.GetGuesses)
+    {
+        <div class=box>
+            <p class="word">@answer</p>
+        </div>
+    }
+}
+</div>
+<div class=rightcolumn>
+    <form method="post" asp-page-handler="Scrap">
+        <input type="hidden" asp-for=gameid/>
+        <input type="submit" value="Scrap game"/>
+    </form>
+    <form method="post" asp-page-handler="Finish">
+        <input type="hidden" asp-for=gameid/>
+        <input type="submit" value="Finish game"/>
+    </form>
+</div>
