--- a/LanguageLearningSite/Pages/GamePages/Practice.cshtml
+++ b/LanguageLearningSite/Pages/GamePages/Practice.cshtml
@@ -44,5 +44,7 @@
 
 
 <div class=rightcolumn>
-
+    <p>You are playing</p>
+    <div class="word">@Model.Games.Count</div>
+    <p>right now</p>
 </div>
